# nrf52840-blink

./: Cargo.toml  flake.nix
.cargo/: config.toml
src/: main.rs
