[package]
name = "nrf52840-blink"
version = "0.1.0"
edition = "2021"

[features]
#default = [
#    "defmt-default"
#]
#
#defmt-default = []
#defmt-trace = []
#defmt-debug = []
#defmt-info = []
#defmt-warn = []
#defmt-error = []

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
nrf52840-hal = "0.18.0"
