[package]
name = "nrf52840-blink"
version = "0.1.0"
edition = "2021"

[features]
#default = [
#    "defmt-default"
#]
#
#defmt-default = []
#defmt-trace = []
#defmt-debug = []
#defmt-info = []
#defmt-warn = []
#defmt-error = []

[dependencies]
cortex-m-rt = { version = "0.7.3" }
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
#cortex-m-rt = "0.7.3"
#nrf52840-hal = "0.18.0"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.0", features = [ "arch-cortex-m", "executor-thread" ] }
embassy-nrf = { version = "0.2.0", features = [ "nrf52840", "defmt", "nfc-pins-as-gpio" ] }
embassy-time = "0.3.2"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
critical-section = "1.1"
